# box-iter

./: Cargo.toml  README.md
src/: lib.rs  trait.rs
